[EDGDEMATIC-79]Update the module to Spring boot v3.0.0 and identify issues.